--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -146,8 +146,8 @@ Taken together, realised and unrealised interaction estimates are then used to p
 
     \paragraph{}
     \textbf{
-    The aim of the following framework is to estimate $B$, the $s \times k$ matrix of interactions between all focal elements $i$ and interacting elements $j$. The effect of element $j$ on the performance of focal element $i$ is noted as $\beta_{ij}$, corresponding to the $i$'th row and the $j$'th column of $B$. 
-    For an interaction $\beta_{ij}$ to be inferrable, and thus realised, the data must contain measurements of the performance of $i$ when interacting with $j$. Moreover, the vector of abundances of $j$ associated to measurements of focal $i$ must be linearly independant to all other vectors of abundances of other elements  belonging to $k$ and interacting with $i$. Thus, if two elements $j$ and $k$ interact with focal $i$ yet have the same abundance at each measurement, neither $\beta_{ij}$ nor $\beta_{ik}$ will be inferrable. We define \textit{realised} interactions as those which are inferrable following the above assumptions, and \textit{unrealised} interactions as those which are not. We construct a matrix $Q$ of size $s \times k$, with $Q_{ij} = 1$ if the corresponding $\beta_{ij}$ paramater is realised, and $Q_{ij} = 0$ if not. How we construct the $Q$ matrix is shared in the code attached to this paper (Supplementary Information XX)}
+    The aim of the joint framework is to estimate $B$, the $s \times k$ matrix of interactions between all focal elements $i$ and interacting elements $j$. The effect of element $j$ on the performance of focal element $i$ is noted as $\beta_{ij}$, corresponding to the $i$'th row and the $j$'th column of $B$. 
+    For an interaction $\beta_{ij}$ to be inferrable, and thus realised, the data must contain measurements of the performance of $i$ when interacting with $j$. Moreover, the vector of abundances of $j$ associated to measurements of focal $i$ must be linearly independant to all other vectors of abundances of other elements  belonging to $k$ and interacting with $i$. Thus, if two elements $j$ and $k$ interact with focal $i$ yet have the same abundance at every measurement, neither $\beta_{ij}$ nor $\beta_{ik}$ will be inferrable. We define \textit{realised} interactions as those which are inferrable following the above assumptions, and \textit{unrealised} interactions as those which are not. We construct a matrix $Q$ of size $s \times k$, with $Q_{ij} = 1$ if the corresponding $\beta_{ij}$ parameter is realised, and $Q_{ij} = 0$ if not. How we construct the $Q$ matrix is shared in the code attached to this paper (Supplementary Information XX)}
 
     
     \subsection{Realised interactions}
@@ -162,8 +162,8 @@ Taken together, realised and unrealised interaction estimates are then used to p
         f(p_{i}) = \beta_{i0} - \sum_{j=1}^{s} \beta_{ij} N_{j}
         \label{nddm}
         \end{equation}
-        \textbf{Note that $p_i$ refers to the subset of individual measurements of performance $p$ for a focal element $i$. [[Maybe better off calling it $P_{d_i}$ ?? Unsure if this makes sense.]]}
-        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$ \textbf{rerite equation following DBS?}.
+        \textbf{Note that $p_i$ refers to the subset of all individual measurements of performance $p$ for a focal element $i$. [[Maybe better off calling it $P_{d_i}$ ?]]}
+        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$. Furthermore, the equation above places no restrictions on the sign of $\beta_{ij}$: interactions can be harmful to the focal element (competition) or beneficial (facilitation). The negative sign in front of $\beta_{ij}$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative. 
 
         \paragraph{}
         This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $p_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function $f$, for example negative binomial and natural logarithm. 
