--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -162,8 +162,8 @@ Taken together, realised and unrealised interaction estimates are then used to p
         f(p_{i}) = \beta_{i0} - \sum_{j=1}^{s} \beta_{ij} N_{j}
         \label{nddm}
         \end{equation}
-        \textbf{Note that $p_i$ refers to the subset of all individual measurements of performance $p$ for a focal element $i$. [[Maybe better off calling it $P_{d_i}$ ?]]}
-        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$. Furthermore, the equation above places no restrictions on the sign of $\beta_{ij}$: interactions can be harmful to the focal element (competition) or beneficial (facilitation). The negative sign in front of $\beta_{ij}$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative. 
+        \textbf{Note that $p_i$ refers to the subset of all individual measurements of performance $p$ for a focal element $i$. [[Maybe better off calling it $p_{d_i}$ ?]]}
+        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$. Furthermore, the equation above places no restrictions on the sign of $\beta_{ij}$: interactions can be harmful to the focal element (competitive) or beneficial (facilitative). The negative sign in front of $\beta_{ij}$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative. 
 
         \paragraph{}
         This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $p_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function $f$, for example negative binomial and natural logarithm. 
@@ -174,7 +174,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
     \paragraph{}
        A common issue in ecological datasets is that some elements may not be observed to interact with many other elements, or at variable enough densities, because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interactions ($\beta_{ij}$), especially for rare elements. These \textit{unrealised} interactions can be estimated by using an alternative model which assumes that elements typically have a singular impact ($e$) on and a singular response ($r$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unrealised interaction is therefore the product of two element's impact and response parameters. 
         \begin{equation}
-        P_{i} = \beta_{i0} - r_{i} \sum_{j=1}^{S} e_{j} N_{j}
+        p_{i} = \beta_{i0} - r_{i} \sum_{j=1}^{k} e_{j} N_{j}
         \label{rim}
         \end{equation}
         Pairwise interactions which cannot be inferred from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. 
