a bit more on methods / rim

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -177,7 +177,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
         p_{i} = \beta_{i0} - r_{i} \sum_{j=1}^{k} e_{j} N_{j}
         \label{rim}
         \end{equation}
-        Pairwise interactions which cannot be inferred from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. 
+        Pairwise interactions which cannot be inferred from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. \textbf{Once again, the abundances of elements $j$ must be linearly independant to one another, but across the entire $X$ matrix (as opposed to \ref{meth:nddm} above, where the abundances of $j$ must be linearly independant within the subset of obervations for each focal $i$).}
 
 
     \subsection{Adding the model likelihoods}
