methods / consequences of joining the models

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -214,16 +214,14 @@ Taken together, realised and unrealised interaction estimates are then used to p
         \end{equation}
 
 \textbf{
-    where the sum is across all $n$ observations, $d_s$ is the probability density for the model (e.g. negative binomial), $p_s$ the vector of measured performances, $\beta_{i0}, r, e,$ and $B$ are parameters as defined in Eqs \ref{nddm} and \ref{rim}, and $\theta$ includes any other parameters (e.g. dispersion if using a negative binomial distribution for the data). }
+    where the sum is across all $n$ observations, $d_s$ is the probability density for the model (e.g. negative binomial), $p_s$ the vector of measured performances, $\beta_{i0}, r, e,$ and $B$ are parameters as defined in Eqs \ref{nddm} and \ref{rim}, and $\theta$ includes any other parameters (e.g. dispersion if using a negative binomial distribution for the data). Note that $p_s$ and $\beta_{i0}$ are common to both the RIM and NDDM.}
 
     [[NB: notation here differs from your and Stefanos because above I define S as the number of focals and K as the number of neighbours. Keeping p as the vector of performances. Unless it's supposed to be all data aka performances and neighbour abundances? Unsure on the correct notation.]]
 
-    Consequences....
 
-    In a hypothetical world where all interactions are inferrable, the NDDM is sufficient to estimate all realised interactions. Given that real-world data will rarely satisfy those requirements, especially in diverse systems, the RIM is used to 'plug' those holes. Conversely, when no interactions are inferrable then we can use the RIM only. 
-
-    The NDDM only estimates realised interactions. The RIM estimates all interactions, realised and unrealised. 
-
+\textbf{
+    In a hypothetical world where all interactions in the observed dataset are realised, then $B = \tilde B$ and the RI model is unnecessary, though $r$ and $e$ parameters would still be estimated. Conversely, if no interactions are realised then the joint model devolves to a RI model only. In the middle ground where the majority of datasets are likely to lie, the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not.  An important distinction to make is that the NDDM estimates realised interactions only, whereas the RIM estimates all interactions, realised and unrealised.     By maximising Eq. \ref{loglikjoint} however, we allow both models to provide good fits to the data but also for $r$ and $e$ to adjust around inferrable values of $B$ [[or should this be $ \tilde B$?]]. 
+}
 
     \subsection{Rescaling interaction estimates into per-capita interactions}
 
@@ -254,7 +252,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
     \subsection{Model fitting}
 
         \paragraph{}        
-        The NDDM (Eq. 1) and the RIM (Eqs. 2 and 3) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify realised interactions which are then fed into the RIM. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. From the model file, only the link function for $p_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_i$) but a different distribution may be more appropriate when using other measures of performance.   
+        The NDDM (Eq. \ref{nddm}) and the RIM (Eq. \ref{rim}) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify realised interactions which are then fed into the RIM. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. From the model file, only the link function for $p_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_i$) but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
         Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
